overlays/production/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: todo-app
    namespace: gitops-todo
spec:
    template:
        spec:
            containers:
                -   name: todo-app
                    image: dhinojosa/gitops-todo:2025.04.29.155742
