overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: todo-app
    namespace: gitops-todo
spec:
    rules:
        -   host: prod.moltenjava.net
            http:
                paths:
                    -   path: /mild-temper
